--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -25,31 +25,32 @@
   width: 55rem;
   height: 28px;
   background-color: #333333;
-  right: 4rem;
-  top: 37rem;
+  right: 4%;
+  top: 90%;
 }
 
 .third {
-  top: 4rem;
+  top: 40%;
+  left: 67%;
 }
 .first {
   display: flex;
-  bottom: -15rem;
-  left: 42rem;
+  bottom: 3%;
+  left: 5%;
 }
 
 .Image3 {
   width: 3rem;
+  left: 90%;
 }
 
 .play {
-  left: 48.5rem;
-  bottom: -13rem;
+
+z-index: 5;
 }
 
 .second {
-  bottom: -23rem;
-  left: 42rem;
+  left: 10%;
 }
 
 .Image,
@@ -75,21 +76,29 @@
   }
 
   .third {
-    top: 4rem;
-    left: 5re-m;
+    top: 34%;
+    left: 15%;
   }
   .first {
     display: flex;
-    left: 4rem;
+    bottom: 3%;
+    left: 5%;
   }
+  
+  .Image3 {
+    width: 3rem;
+    left: 90%;
+  }
+  
   .play {
-    left: 7.5rem;
-    top: 11rem;
+  
+  z-index: 5;
   }
+  
   .second {
-    left: 4rem;
-    top: 15rem;
+    left: 10%;
   }
+  
 
   .Image,
   .Image1,
