--- a/src/components/Newsletter.css
+++ b/src/components/Newsletter.css
@@ -23,7 +23,7 @@
 }
 
 input{
-  height: 40px;
+  height: 50px;
     border: 0px solid #F2F2F2;
     background-color: #F2F2F2;
     width: 15rem;
@@ -48,7 +48,7 @@ form button {
   font-weight: 700;
   line-height: 20px;
   width: 119px;
-  height: 40px;
+  height: 50px;
   letter-spacing: 0em;
   text-align: center;
 }
