--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -83,7 +83,7 @@
   text-align: center;
   margin-right: 12rem;
   margin-top: 2rem;
-  width: 119px;
+  width: 130px;
   height: 40px;
   margin-top: 3rem;
 }
